Fix overflow issue in search__name.

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,8 +1,3 @@
-.sucker__slipper {
-  /* position: sticky;
-  top: 0; */
-}
-
 .hero {
   grid-column: 1 / span 4;
   grid-row: 1 / 6;
